--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ six==1.8.0
 requests==2.5.0
 Flask-Cors==1.9.0
 twilio==3.6.7
-blinker==1.3
 raven==5.1.1
 redis==2.10.3
+blinker==1.3
+-e git+https://github.com/ashimali/messenger.git#egg=messenger
